// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Checked & disabled 1`] = `
<label
  className="checkbox checkbox_disabled"
>
  <input
    aria-checked={true}
    checked={true}
    className="checkbox__input"
    disabled={true}
    name="default"
    role="checkbox"
    tabIndex={-1}
    type="checkbox"
  />
</label>
`;

exports[`Default Checked 1`] = `
<label
  className="checkbox"
>
  <input
    aria-checked={true}
    checked={true}
    className="checkbox__input"
    name="default"
    role="checkbox"
    tabIndex={0}
    type="checkbox"
  />
</label>
`;

exports[`Default Indeterminate & disabled 1`] = `
<label
  className="checkbox checkbox_disabled"
>
  <input
    aria-checked="mixed"
    className="checkbox__input checkbox__input_indeterminate"
    disabled={true}
    name="default"
    role="checkbox"
    tabIndex={-1}
    type="checkbox"
  />
</label>
`;

exports[`Default Indeterminate 1`] = `
<label
  className="checkbox"
>
  <input
    aria-checked="mixed"
    className="checkbox__input checkbox__input_indeterminate"
    name="default"
    role="checkbox"
    tabIndex={0}
    type="checkbox"
  />
</label>
`;

exports[`Default Not checked & disabled 1`] = `
<label
  className="checkbox checkbox_disabled"
>
  <input
    aria-checked={false}
    className="checkbox__input"
    disabled={true}
    name="default"
    role="checkbox"
    tabIndex={-1}
    type="checkbox"
  />
</label>
`;

exports[`Default Not checked 1`] = `
<label
  className="checkbox"
>
  <input
    aria-checked={false}
    className="checkbox__input"
    name="default"
    role="checkbox"
    tabIndex={0}
    type="checkbox"
  />
</label>
`;

exports[`Label & Description Checked & disabled 1`] = `
<label
  className="checkbox checkbox_disabled checkbox_description"
>
  <input
    aria-checked={true}
    checked={true}
    className="checkbox__input"
    disabled={true}
    name="default"
    role="checkbox"
    tabIndex={-1}
    type="checkbox"
  />
  Checkbox label
  <span
    className="checkbox__description"
  >
    Checkbox description
  </span>
</label>
`;

exports[`Label & Description Checked 1`] = `
<label
  className="checkbox checkbox_description"
>
  <input
    aria-checked={true}
    checked={true}
    className="checkbox__input"
    name="default"
    role="checkbox"
    tabIndex={0}
    type="checkbox"
  />
  Checkbox label
  <span
    className="checkbox__description"
  >
    Checkbox description
  </span>
</label>
`;

exports[`Label & Description Indeterminate & disabled 1`] = `
<label
  className="checkbox checkbox_disabled checkbox_description"
>
  <input
    aria-checked="mixed"
    className="checkbox__input checkbox__input_indeterminate"
    disabled={true}
    name="default"
    role="checkbox"
    tabIndex={-1}
    type="checkbox"
  />
  Checkbox label
  <span
    className="checkbox__description"
  >
    Checkbox description
  </span>
</label>
`;

exports[`Label & Description Indeterminate 1`] = `
<label
  className="checkbox checkbox_description"
>
  <input
    aria-checked="mixed"
    className="checkbox__input checkbox__input_indeterminate"
    name="default"
    role="checkbox"
    tabIndex={0}
    type="checkbox"
  />
  Checkbox label
  <span
    className="checkbox__description"
  >
    Checkbox description
  </span>
</label>
`;

exports[`Label & Description Not checked & disabled 1`] = `
<label
  className="checkbox checkbox_disabled checkbox_description"
>
  <input
    aria-checked={false}
    className="checkbox__input"
    disabled={true}
    name="default"
    role="checkbox"
    tabIndex={-1}
    type="checkbox"
  />
  Checkbox label
  <span
    className="checkbox__description"
  >
    Checkbox description
  </span>
</label>
`;

exports[`Label & Description Not checked 1`] = `
<label
  className="checkbox checkbox_description"
>
  <input
    aria-checked={false}
    className="checkbox__input"
    name="default"
    role="checkbox"
    tabIndex={0}
    type="checkbox"
  />
  Checkbox label
  <span
    className="checkbox__description"
  >
    Checkbox description
  </span>
</label>
`;

exports[`Label Checked & disabled 1`] = `
<label
  className="checkbox checkbox_disabled"
>
  <input
    aria-checked={true}
    checked={true}
    className="checkbox__input"
    disabled={true}
    name="default"
    role="checkbox"
    tabIndex={-1}
    type="checkbox"
  />
  Checkbox label
</label>
`;

exports[`Label Checked 1`] = `
<label
  className="checkbox"
>
  <input
    aria-checked={true}
    checked={true}
    className="checkbox__input"
    name="default"
    role="checkbox"
    tabIndex={0}
    type="checkbox"
  />
  Checkbox label
</label>
`;

exports[`Label Indeterminate & disabled 1`] = `
<label
  className="checkbox checkbox_disabled"
>
  <input
    aria-checked="mixed"
    className="checkbox__input checkbox__input_indeterminate"
    disabled={true}
    name="default"
    role="checkbox"
    tabIndex={-1}
    type="checkbox"
  />
  Checkbox label
</label>
`;

exports[`Label Indeterminate 1`] = `
<label
  className="checkbox"
>
  <input
    aria-checked="mixed"
    className="checkbox__input checkbox__input_indeterminate"
    name="default"
    role="checkbox"
    tabIndex={0}
    type="checkbox"
  />
  Checkbox label
</label>
`;

exports[`Label Not checked & disabled 1`] = `
<label
  className="checkbox checkbox_disabled"
>
  <input
    aria-checked={false}
    className="checkbox__input"
    disabled={true}
    name="default"
    role="checkbox"
    tabIndex={-1}
    type="checkbox"
  />
  Checkbox label
</label>
`;

exports[`Label Not checked 1`] = `
<label
  className="checkbox"
>
  <input
    aria-checked={false}
    className="checkbox__input"
    name="default"
    role="checkbox"
    tabIndex={0}
    type="checkbox"
  />
  Checkbox label
</label>
`;
